bootstrapの適応、表示の制御

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require bootstrap/dist/css/bootstrap.min
  *= require_tree .
  *= require_self
  */
@@ -36,8 +37,7 @@ header ul a{
 }
 
 .main-header{
-    padding-bottom:15%;
-    width:100%;
+    padding-bottom: 15%;
     background-image: url("/assets/camera.jpg");
     background-attachment: fixed;
     background-size:cover;
@@ -46,8 +46,9 @@ header ul a{
 .container{
     position: relative;
     margin:0 auto;
+    min-width: 100%;
     min-height: 100%;
-    padding-bottom: 70px;
+    padding: 0px 0px 70px 0px;
 }
 
 .menue_items{
