--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@ html{
 
 header{
     background-color: aliceblue;
+    font-family: 'Glyphicons Halflings'
 }
 
 header ul{
@@ -76,3 +77,16 @@ footer{
     width:100%;
     background-color: #2f4f4f;
 }
+
+
+/*
+@font-face {
+  font-family: "Glyphicons Halflings";
+
+  src: font-url("glyphicons-halflings-regular.eot");
+  src: font-url("glyphicons-halflings-regular.svg");
+  src: font-url("glyphicons-halflings-regular.ttf") format('truetype');
+  src: font-url("glyphicons-halflings-regular.woff");
+  src: font-url("glyphicons-halflings-regular.woff2");
+}
+*/
