--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,13 +78,11 @@ footer{
     background-color: #2f4f4f;
 }
 
-
 @font-face {
-  font-family: "glyphicon";
-
-  src: font-url("glyphicons-halflings-regular.eot");
-  src: font-url("glyphicons-halflings-regular.svg");
-  src: font-url("glyphicons-halflings-regular.ttf") format('truetype');
-  src: font-url("glyphicons-halflings-regular.woff");
-  src: font-url("glyphicons-halflings-regular.woff2");
+  font-family: ‘Glyphicons Halflings’;
+  src: url(‘/assets/glyphicons-halflings-regular.eot’);
+  src: url(‘/asstes/glyphicons-halflings-regular.eot?#iefix’) format(‘embedded-opentype’),
+  url(‘/assets/glyphicons-halflings-regular.woff’) format(‘woff’),
+  url(‘/assets/glyphicons-halflings-regular.ttf’) format(‘truetype’),
+  url(‘/assets/glyphicons-halflings-regular.svg#glyphicons-halflingsregular’) format(‘svg’);
 }
