--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,9 +80,9 @@ footer{
 
 @font-face {
   font-family: ‘Glyphicons Halflings’;
-  src: url(‘/assets/glyphicons-halflings-regular.eot’);
-  src: url(‘/asstes/glyphicons-halflings-regular.eot?#iefix’) format(‘embedded-opentype’),
-  url(‘/assets/glyphicons-halflings-regular.woff’) format(‘woff’),
-  url(‘/assets/glyphicons-halflings-regular.ttf’) format(‘truetype’),
-  url(‘/assets/glyphicons-halflings-regular.svg#glyphicons-halflingsregular’) format(‘svg’);
+  src: url(glyphicons-halflings-regular.eot);
+  src: url(glyphicons-halflings-regular.eot?#iefix) format(‘embedded-opentype’),
+  url(glyphicons-halflings-regular.woff) format(‘woff’),
+  url(glyphicons-halflings-regular.ttf) format(‘truetype’),
+  url(glyphicons-halflings-regular.svg#glyphicons-halflingsregular) format(‘svg’);
 }
