--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,7 @@ header ul a{
 
 .main-header{
     padding-bottom: 15%;
-    background: url("/assets/camera.jpg");
+    background-image: url("/assets/camera.jpg");
     background-attachment: fixed;
     background-size:cover;
 }
