--- a/app/views/feeds/top.html.erb
+++ b/app/views/feeds/top.html.erb
@@ -1,5 +1,5 @@
 <section class = "main-header">
-    <img src="images/imagefeeds.png">
+    <img src="/images/imagefeeds.png">
 </section>
 <section class="preamble">
   <h1>About ImageFeeds</h1>
