--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,65 +13,55 @@
  *= require_tree .
  *= require_self
  */
+html {
+  height: 100%; }
 
-html{
-    height: 100%;
-}
+header {
+  background-color: aliceblue; }
 
-header{
-    background-color: aliceblue;
-}
+header ul {
+  padding-left: 0px;
+  margin: 0;
+  list-style-type: none; }
 
-header ul{
-    padding-left:0px;
-    margin:0;
-    list-style-type: none;
-}
+header ul a {
+  display: block;
+  padding: 10px 20px;
+  color: black;
+  text-decoration: none; }
 
-header ul a{
-    display:block;
-    padding:10px 20px;
-    color:black;
-    text-decoration: none;
-}
+.main-header {
+  padding-bottom: 15%;
+  background-image: url("camera.jpg");
+  background-attachment: fixed;
+  background-size: cover; }
 
-.main-header{
-    padding-bottom: 15%;
-    background-image: url("/images/camera.jpg");
-    background-attachment: fixed;
-    background-size:cover;
-}
+.container {
+  position: relative;
+  margin: 0 auto;
+  min-width: 100%;
+  min-height: 100%;
+  padding: 0px 0px 70px 0px !important; }
 
-.container{
-    position: relative;
-    margin:0 auto;
-    min-width: 100%;
-    min-height: 100%;
-    padding: 0px 0px 70px 0px !important;
-}
+.menue_items {
+  display: flex;
+  justify-content: space-between; }
 
-.menue_items{
-    display: flex;
-    justify-content: space-between;
-}
+.menue_items li {
+  display: inline-flex; }
 
-.menue_items li{
-    display: inline-flex;
-}
+.lists_content {
+  height: 100%; }
 
-.lists_content{
-    height: 100%;
-}
+body {
+  text-align: center;
+  height: 100%; }
 
-body{
-    text-align: center;
-    height: 100%;
-}
+footer {
+  height: 70px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #2f4f4f; }
 
-footer{
-    height: 70px;
-    position: absolute;
-    bottom: 0;
-    width:100%;
-    background-color: #2f4f4f;
-}
+/*# sourceMappingURL=application.css.map */
